feat: creat find products by categoryId api
