# src/routes/product.routes.js
@@ -11,4 +11,7 @@ router.delete('/deleteProduct/:id', productController.deleteProduct);
 router.put('/updateProduct/:id', productController.updateProduct);
 
 router.get('/getProducts/:id', productController.getProductById);
+
+router.get('/getProductsByCategory/:categoryId', productController.getProductsByCategory);
+
 module.exports = router;
